--- a/index.html
+++ b/index.html
@@ -3,22 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Christmas Quest</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.red.min.css"
     />
-    <link rel="icon" href="images/favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
+    <style>
+      #logo {
+        scale: 0.75;
+      }
+    </style>
   </head>
   <body>
     <main>
       <section class="container">
         <!--Note to self, make a box with a padlock on it-->
         <!--Now... for gift ideas? Battery sorter, food, gift cards-->
-        <h1>Hello World</h1>
-        <p>Ah, you have come here to solve the puzzle?</p>
+        <!--Make a cookie clicker cloned game but Christmas themed with JS-->
+        <img src="logo.svg" id="logo" />
+        <article>
+          <h1>Welcome!</h1>
+          <p>
+            Hey there! Is this website an excuse to work more with web design
+            and javascript? Maybe, but it's also the way to unlock.
+          </p>
+          <button></button>
+        </article>
         <p>Built with <a href="https://picocss.com/">Pico</a></p>
       </section>
     </main>
   </body>
+  <script src="script.js"></script>
 </html>
