cookie clicker function added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       }
       .cookie img {
         cursor: pointer;
+        transition: transform 120ms ease;
+      }
+      .cookie img.clicked {
+        transform: scale(0.92);
       }
     </style>
   </head>
